<resources>
    <string name="app_name">인스타 클론</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home_main">홈</string>
    <string name="menu_article_detail">상세</string>
    <string name="menu_gallery">갤러리</string>
    <string name="menu_slideshow">슬라이드 쇼</string>
    <string name="menu_article_write">작성</string>
    <string name="menu_member_login">로그인</string>
</resources>