<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <action
        android:id="@+id/action_global_homeMainFragment"
        app:destination="@id/nav_home_main"
        app:launchSingleTop="true" />

    <action
        android:id="@+id/action_global_articleWriteFragment"
        app:destination="@id/nav_article_write"
        app:launchSingleTop="true" />

    <action
        android:id="@+id/action_global_articleDetailFragment"
        app:destination="@id/nav_article_detail"
        app:launchSingleTop="true" />

    <fragment
        android:id="@+id/nav_home_main"
        android:name="com.example.sbs.myapplication.ui.HomeMainFragment"
        android:label="@string/menu_home_main"
        tools:layout="@layout/fragment_home_main" />

    <fragment
        android:id="@+id/nav_article_write"
        android:name="com.example.sbs.myapplication.ui.ArticleWriteFragment"
        android:label="@string/menu_article_write"
        tools:layout="@layout/fragment_article_write" />

    <fragment
        android:id="@+id/nav_article_detail"
        android:name="com.example.sbs.myapplication.ui.ArticleDetailFragment"
        android:label="@string/menu_article_detail"
        tools:layout="@layout/fragment_article_detail">
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="article"
            app:argType="com.example.sbs.myapplication.dto.Article"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sbs.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.sbs.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>